[package]
name = "pytpch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pytpch"
crate-type = ["cdylib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
anyhow = "1.0.79"
arrow = { version = "50.0.0", features = ["csv", "pyarrow"] }
arrow-array = "50.0.0"
arrow-csv = "50.0.0"
pyo3 = { version = "0.20.2", default-features = false, features = ["macros"] }
tempfile = "3.9.0"

[build-dependencies]
cc = "1.0.83"
